crates/edgedb_codegen/tests/compile/macros/no_args.stderr
error: unexpected end of macro invocation
 --> tests/compile/macros/no_args.rs:4:2
  |
4 |     edgedb_query!();
  |     ^^^^^^^^^^^^^^^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$module:ident`
 --> src/lib.rs
  |
  |     ($module:ident, $query:literal) => {
  |      ^^^^^^^^^^^^^
